add lunar update

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-native-calendars",
-  "version": "1.22.0",
+  "name": "@truthora-dev/calendar",
+  "version": "1.22.3",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
   "description": "React Native Calendar Components",
   "scripts": {
-    "build": "yarn build:tsc && yarn build:docs",
+    "build": "yarn build:ts && yarn build:docs",
     "build:ts": "tsc",
     "build:dev": "tsc --noEmit",
     "build:docs": "node ./scripts/build-docs.js",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wix/react-native-calendars"
+    "url": "git+https://github.com/truthora/lunar-calendar"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
